<resources>
    <string name="app_name">Student Information System</string>
    <string name="title_activity_student">Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">LOGOUT</string>

    <string name="menu_home">Home</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_homework">Home Work</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_announcement">Announcements</string>
    <string name="menu_holidays">Holidays</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_staff">Staff</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_parent">Parent</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
